removed un-needed files

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <title>Homepage</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
 </head>
 
 <body>
 
-  <!-- hero section -->
+  <!-- ---- Hero Section ---- -->
+
   <main class="hero">
     <div class="hero-inner">
 
-      <!-- clock -->
+      <!-- ---- Clock ---- -->
+
       <section id="clock">
         <div id="time">
 
@@ -38,9 +38,9 @@
         </div>
       </section>
 
-      <!-- weather -->
+      <!-- ---- Weather ---- -->
 
-      <section>
+      <section class='weather'>
         <div class="weather-main">
           <div id="temperature"></div>
           <div id="description"></div>
@@ -48,10 +48,16 @@
         </div>
       </section>
 
+      <!-- ---- My Site links ---- -->
+
+      <section class="mySites">
+      </section>
+
     </div>
   </main>
 
-  <!-- scripts -->
+  <!-- ---- Scripts ---- -->
+
   <script src="index.js"></script>
 </body>
 
